--- a/index.html
+++ b/index.html
@@ -139,15 +139,14 @@
         position: absolute;
         right:20px;
         bottom: 20px;
-        padding: 15px;
-        padding-bottom:5px;
+        padding: 15px 10px 10px 10px;
         background: rgba(255,255,255, .8);
         border-radius: 3px;
         line-height: 0px;
       }
       .legend-item {
         position: relative;
-        height: 6px;
+        height: 4px;
         display: inline-block;
         width: 40px;
         color: white;
@@ -155,7 +154,6 @@
         font-weight: bold;
         text-align: right;
         padding-right: 2px;
-        line-height:6px;
       }
       
       #park-score-description {
@@ -194,9 +192,10 @@
       }
 
       #legend-ticks {
-        border-left: 1px solid #555;
-        border-right: 1px solid #555;
-        padding-top:4px;
+        border-left: 1px solid #333;
+        border-right: 1px solid #333;
+        border-bottom: 1px solid #333;
+        padding-top:2px;
         margin-top: 10px;
         box-sizing: border-box;
       }
