--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
     <div id="info" class="box">
       <div id="info-header">
         <h1>The State of Bronx Parks</h1>
-        <p style="border-bottom: 1px solid #eaeaea; padding-bottom: 15px; margin-bottom: 15px; font-size: 14px;"><i>By <a href="http://bronxink.org/author/lucas_manfield/">Lucas Manfield</a> for BronxInk, October 6, 2018</i></p>
+        <p style="border-bottom: 1px solid #eaeaea; padding-bottom: 15px; margin-bottom: 15px; font-size: 14px;"><i>By <a href="http://bronxink.org/author/lucas_manfield/">Lucas Manfield</a> for BronxInk, October 18th, 2018</i></p>
         <p>
           Since 1994, New York City has sent inspectors out to its public parks to rate the "overall condition" of each park. Over the last year, the percentage of parks in the Bronx deemed "acceptable" has fluctuated between 84 and 94 percent, according to the city’s Parks Department website. 
         </p>
