--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
           City inspectors have only two options when grading a park's overall condition: passing or failing. Furthermore, this grade only reflects a snapshot in time. To offer a more nuanced comparison between parks, The BronxInk compiled inspection data from the beginning of 2016 to August 2018 and calculated the percentage of times each park passed.
         </p>
         <p>
-          One park stood out: <a href="#" onclick="woodsclick()">University Woods</a>, nestled on a hillside along the borough's western border and in dark red on the map, failed to receive a single acceptable rating during this period. <a href="#">Read the story here »</a>
+          One park stood out: <a href="#" onclick="woodsclick()">University Woods</a>, nestled on a hillside along the borough's western border and in dark red on the map, failed to receive a single acceptable rating during this period. <a href="http://bronxink.org/parks-2018/little-west-bronx-park-that-could/">Read the story here »</a>
         </p>
       </div>
       <div id="info-body">
